dhall/tests/type-inference/failure/unit/FunctionArgumentTypeNotAType.txt
Type error: error: Invalid input type: `Natural`
 --> <current file>:1:6
  |
1 | λ(_ : 1) → _
  |       ^ this has type: `Natural`
  |
  = help: The input type of a function must have type `Type`, `Kind` or `Sort`
